<resources>
    <string name="app_name">ECommerce-pijush</string>
    <string name="sign_in">Already have an account? Login</string>
    <string name="sign_up">Join Now</string>
    <string name="app_quote">Find, Discover, Choose and Buy anything anytime.</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget  Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="full_name">Full Name</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="database_error">Sorry !! We are unable to verify</string>
    <string name="invalid_number">Invalid mobile number</string>
    <string name="creating_new_account">Mobile number is valid.Please wait we are creating your account</string>
    <string name="number_already_exist">Mobile number already exist</string>
    <string name="user_online">Back to online</string>
    <string name="user_offline">No internet.Using offline</string>
    <string name="button">Button</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>