<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/btn_default"
        android:fontFamily="@font/roboto"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="@dimen/btn_default_padding"
        android:text="Create new account"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerInside"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_quote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="cursive"
        android:text="@string/app_quote"
        android:textAlignment="center"
        android:textColor="@color/pink_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <ImageView
        android:id="@+id/img_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/txt_quote"
        app:layout_constraintStart_toStartOf="@+id/txt_quote"
        app:layout_constraintTop_toBottomOf="@+id/txt_quote"
        app:srcCompat="@drawable/web_shopping" />
</androidx.constraintlayout.widget.ConstraintLayout>