<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerModel"
            type="com.blogspot.ecommerce_pijush.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView8"
                    style="@style/text_label_icon"
                    android:layout_width="46dp"
                    android:layout_height="49dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout8"
                    app:layout_constraintVertical_bias="0.52"
                    app:srcCompat="@android:drawable/ic_lock_lock" />

                <ImageView
                    android:id="@+id/imageView7"
                    style="@style/text_label_icon"
                    android:layout_width="46dp"
                    android:layout_height="49dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout5"
                    app:srcCompat="@drawable/ic_baseline_email_24" />

                <ImageView
                    android:id="@+id/imageView5"
                    style="@style/text_label_icon"
                    android:layout_width="46dp"
                    android:layout_height="49dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_baseline_location_on_24" />

                <ImageView
                    android:id="@+id/imageView6"
                    style="@style/text_label_icon"
                    android:layout_width="46dp"
                    android:layout_height="49dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout6"
                    app:layout_constraintVertical_bias="0.53"
                    app:srcCompat="@drawable/ic_baseline_cake_24" />

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/text_label_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                    app:srcCompat="@drawable/ic_baseline_person_24" />

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/text_label_icon"
                    android:layout_width="46dp"
                    android:layout_height="49dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
                    app:srcCompat="@drawable/ic_baseline_phone_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tet_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email Address"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:boxCornerRadiusTopEnd="@dimen/lyt_corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/lyt_corner_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tet_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout6"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tet_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Date of Birth"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tet_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Number"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tet_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="Address"
                        android:inputType="textMultiLine"
                        android:lines="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tet_area_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Code"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout8"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tet_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

                <Button
                    android:id="@+id/btn_register_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toStartOf="@+id/btn_register_submit"
                    app:layout_constraintTop_toTopOf="@+id/btn_register_submit" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/applogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>